--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "formik": "^2.4.5",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
