--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "simplebar-react": "^2.4.3",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
   },
