--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-spinners": "^0.13.8",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "rsuite": "^5.48.0",
     "simplebar-react": "^2.4.3",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4",
