--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.1",
     "formik": "^2.4.5",
+    "jodit-react": "^1.3.39",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.1.3",
