--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^42.0.1",
+    "@ckeditor/ckeditor5-react": "^8.0.0",
     "@coreui/coreui": "^4.2.6",
     "@coreui/react": "^4.9.0-rc.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.14.18",
-    "@mui/material": "^5.14.18",
+    "@mui/material": "^5.16.4",
     "@mui/x-data-grid": "^6.18.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -16,6 +18,9 @@
     "axios": "^1.6.2",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.11.1",
+    "ckeditor5": "^42.0.1",
+    "ckeditor5-premium-features": "^42.0.1",
+    "draft-js": "^0.11.7",
     "formik": "^2.4.5",
     "jodit-react": "^1.3.39",
     "prop-types": "^15.8.1",
@@ -33,6 +38,7 @@
     "redux": "^4.2.1",
     "rsuite": "^5.48.0",
     "simplebar-react": "^2.4.3",
+    "styled-components": "^6.1.12",
     "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.2"
